<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#bcd1f7">

        <EditText
            android:id="@+id/edt_Rname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"

            android:ems="12"
            android:hint="@string/username"
            android:padding="10dp" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/edt_Rpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"

            android:ems="12"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/edt_RRepassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"

            android:ems="12"
            android:hint="@string/ConfirmPWD"
            android:inputType="textPassword"
            android:padding="10dp">
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/edt_Rmobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:ems="12"
            android:hint="@string/MobileNo"
            android:inputType="number"
            android:padding="10dp" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/edt_Remail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:ems="12"
            android:hint="@string/emaila"
            android:padding="10dp" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"

            android:ems="10"
            android:padding="10dp"
            android:text="@string/Register"
            android:textColor="#010101"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>