<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#bcd1f7"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edt_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:ems="12"
            android:hint="@string/username"
            android:padding="10dp" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:ems="12"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"

            android:ems="10"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="#080806"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>